# base64-codec

./: Cargo.toml  README.md
src/: codec.rs  lib.rs
tests/: primary.rs
