[package]
name = "base64-codec"
version = "0.1.0"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
edition = "2018"
workspace = "../"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#futures_codec = { git = "https://github.com/matthunz/futures-codec/", version = "0.4.0" }
tokio-util = "0.3.1"
base64 = { path = "../base64", version = "0.10.1" }
bytes = "0.5.6"